# optools

./: .gitignore  README.md  __init__.py  blackscholes.py  blackscholesmix.py  calc_ap_tests.py  calc_sorts.py  calculations.py  calculations_actual_betas.py  calculations_betas.py  calculations_from_parameters.py  calculations_from_variance.py  calculations_hf.py  calculations_plots.py  calculations_predict_betas.py  config.py  data_management.py  factormodels.py  functions.py  greeks.py  helpers.py  implied.py  implied_beta_functions.py  import_data.py  lnmix.py  misc.py  noarbitrage.py  oib_paper.py  oib_paper_settings.py  optools.py  optools_func.py  optools_logger.txt  optools_wrappers.py  organize_data.py  pricing.py  pricing_wrappers.py  pyproject.toml  recipies.py  rnd.py  setup.py  (+5 more)
limbo/: factormodels.py  flb.py  implied_beta_functions.py  utils.py
optools/: blackscholes.py  greeks.py  helpers.py  noarbitrage.py  smile.py  strike.py
tests/: test_clark.py  test_lnmix.py  test_optools.py  test_pricing.py  test_rnd.py  test_smile.py  test_strike.py  test_volsmile.py
